--- a/index.html
+++ b/index.html
@@ -22,9 +22,8 @@
     <div id="stateJSON">
     </div>
     <button id="shuffleDrawButton">Start Encounter</button>
-    <button id="startTurnButton">start turn</button>
     <button id="endTurnButton">End Turn</button>
-    <button id="resetButton">Reset</button>
+    <!-- <button id="resetButton">Reset</button> -->
 
 
     <div class="flex-container" id="cardScreenSection">
