--- a/index.html
+++ b/index.html
@@ -39,7 +39,9 @@
         <div id="discardDiv"></div>
     </div>
     </div>
-    <script src="main.js"></script>
+    <script type="text/javascript" src="Cards.js"></script>
+    <script type="text/javascript" src="Monsters.js"></script>
+    <script type="text/javascript" src="main.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/immer/9.0.16/immer.umd.development.min.js"></script>
 </body>
 </html>
