--- a/index.html
+++ b/index.html
@@ -6,38 +6,38 @@
     </head>
 
 <body>
-    <div class="flex-container" id="stats">
-        <div id="playerStats">
+    <div id="app">
+        <div class="flex-container" id="stats">
+            <div id="playerStats">
 
 
+            </div>
+
+            <div id="playerDeckPile" class="pile">Current Deck
+                <div id="deckDiv"> </div>
+            </div>
+
+            <div id="opponents"></div>
         </div>
 
-        <div id="playerDeckPile" class="pile">Current Deck
-            <div id="deckDiv"> </div>
+        <button id="shuffleDrawButton">Start Encounter</button>
+        <button id="endTurnButton">End Turn</button>
+        <!-- <button id="resetButton">Reset</button> -->
+
+
+        <div class="flex-container" id="cardScreenSection">
+        <div id="drawPile" class="pile">
+            <p>Draw Pile
+            </p>
+            <div id="drawDiv"></div>
+
         </div>
-
-        <div id="opponents"></div>
-    </div>
-
-    <div id="stateJSON">
-    </div>
-    <button id="shuffleDrawButton">Start Encounter</button>
-    <button id="endTurnButton">End Turn</button>
-    <!-- <button id="resetButton">Reset</button> -->
-
-
-    <div class="flex-container" id="cardScreenSection">
-    <div id="drawPile" class="pile">
-        <p>Draw Pile
-        </p>
-        <div id="drawDiv"></div>
-
-    </div>
-    <div id="handContainer2"> </div>
-    <div id="handContainer"> </div>
-    <div id="discardPile" class="pile">Discard Pile
-        <div id="discardDiv"></div>
-    </div>
+        <div id="handContainer2"> </div>
+        <div id="handContainer"> </div>
+        <div id="discardPile" class="pile">Discard Pile
+            <div id="discardDiv"></div>
+        </div>
+        </div>
     </div>
     <script type="text/javascript" src="Cards.js"></script>
     <script type="text/javascript" src="Monsters.js"></script>
