--- a/index.html
+++ b/index.html
@@ -39,11 +39,12 @@
         </div>
         </div>
     </div>
-    <script type="text/javascript" src="Cards.js"></script>
     <script type="text/javascript" src="Monsters.js"></script>
+    <script type="text/javascript" src="easyEncounters.js"></script>
+    <script type="text/javascript" src="Cards.js"></script>
+    <script type="text/javascript" src="EncounterArrays.js"></script>
     <script type="text/javascript" src="oldMonsters.js"></script>
     <script type="text/javascript" src="main.js"></script>
-    <script type="text/javascript" src="easyEncounters.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/immer/9.0.16/immer.umd.development.min.js"></script>
 </body>
 </html>
