--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
     </div>
     <script type="text/javascript" src="Monsters.js"></script>
     <script type="text/javascript" src="easyEncounters.js"></script>
+    <script type="text/javascript" src="bossEncounters.js"></script>
     <script type="text/javascript" src="Cards.js"></script>
     <script type="text/javascript" src="EncounterArrays.js"></script>
     <script type="text/javascript" src="oldMonsters.js"></script>
