--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
     <script type="text/javascript" src="Monsters.js"></script>
     <script type="text/javascript" src="easyEncounters.js"></script>
     <script type="text/javascript" src="bossEncounters.js"></script>
+    <script type="text/javascript" src="basicCardPool.js"></script>
+    <script type="text/javascript" src="waterCardPool.js"></script>
     <script type="text/javascript" src="Cards.js"></script>
     <script type="text/javascript" src="EncounterArrays.js"></script>
     <script type="text/javascript" src="oldMonsters.js"></script>
