--- a/index.html
+++ b/index.html
@@ -44,9 +44,10 @@
     <script type="text/javascript" src="bossEncounters.js"></script>
     <script type="text/javascript" src="basicCardPool.js"></script>
     <script type="text/javascript" src="waterCardPool.js"></script>
-    <script type="text/javascript" src="Cards.js"></script>
+    <script type="text/javascript" src="fireCardPool.js"></script>
+    <script type="text/javascript" src="cardPools.js"></script>
     <script type="text/javascript" src="EncounterArrays.js"></script>
-    <script type="text/javascript" src="oldMonsters.js"></script>
+    <script type="text/javascript" src="playerMonsters.js"></script>
     <script type="text/javascript" src="main.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/immer/9.0.16/immer.umd.development.min.js"></script>
 </body>
