--- a/index.html
+++ b/index.html
@@ -41,10 +41,11 @@
     </div>
     <script type="text/javascript" src="Monsters.js"></script>
     <script type="text/javascript" src="easyEncounters.js"></script>
+    <script type="text/javascript" src="mediumEncounters.js"></script>
+    <script type="text/javascript" src="hardEncounters.js"></script>
     <script type="text/javascript" src="bossEncounters.js"></script>
     <script type="text/javascript" src="basicCardPool.js"></script>
     <script type="text/javascript" src="waterCardPool.js"></script>
-    <script type="text/javascript" src="fireCardPool.js"></script>
     <script type="text/javascript" src="cardPools.js"></script>
     <script type="text/javascript" src="EncounterArrays.js"></script>
     <script type="text/javascript" src="playerMonsters.js"></script>
