--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <title>Pokemon the spire</title>
         <link rel="stylesheet" type="text/css" href="style.css">
+        <meta name="color-profile" content="sRGB">
     </head>
 
 <body>
@@ -45,7 +46,6 @@
     <script type="text/javascript" src="hardEncounters.js"></script>
     <script type="text/javascript" src="bossEncounters.js"></script>
     <script type="text/javascript" src="basicCardPool.js"></script>
-    <script type="text/javascript" src="waterCardPool.js"></script>
     <script type="text/javascript" src="cardPools.js"></script>
     <script type="text/javascript" src="EncounterArrays.js"></script>
     <script type="text/javascript" src="playerMonsters.js"></script>
