changed relic structure; minor bug fixes

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <div id="app">
     </div>
 
+    <script type="text/javascript" src="relics.js"></script>
     <script type="text/javascript" src="motherload.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/immer/9.0.16/immer.umd.development.min.js"></script>
 </body>
