--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/immer/9.0.16/immer.umd.development.min.js"></script>
     <script type="text/javascript" src="relics.js"></script>
+    <script type="text/javascript" src="roulette.js"></script>
     <script type="text/javascript" src="renderFunctions.js"></script>
     <script type="text/javascript" src="motherload.js"></script>
     
